--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0450.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0450.html
@@ -39,7 +39,7 @@
         </span>
         <span id="w_5" class="ocr_word" title="bbox 655 343 808 416" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἀνὴρ</ins>
+            <ins title="nlp 2.00">ἀνὴρ</ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 847 348 901 395" lang="grc">
@@ -180,7 +180,7 @@
         </span>
         <span id="w_34" class="ocr_word" title="bbox 1086 577 1306 641" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τέμενος</ins>
+            <ins title="nlp 2.00">τέμενος</ins>
           </span>
         </span>
         <span id="w_35" class="ocr_word" title="bbox 1337 578 1389 628" lang="grc">
