--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0496.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0496.html
@@ -183,14 +183,14 @@
             <ins class="alt" title="nlp 1.00">θαλάσσης</ins>
           </span>
         </span>
-        <span id="w_33" class="ocr_word" title="bbox 1666 545 1768 611" lang="grc">
+        <span id="w_33_0" class="ocr_word" title="bbox 1666 545 1768 611">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ</ins>
+            <ins class="alt" title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 1807 565 1899 611" lang="grc">
+        <span id="w_33_1" class="ocr_word" title="bbox 1666 545 1768 611">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γὰρ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -835,7 +835,7 @@
         </span>
         <span id="w_158" class="ocr_word" title="bbox 584 1711 820 1774" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁπηνίκα</ins>
+            <ins title="nlp 2.00">(ὁπηνίκα</ins>
           </span>
         </span>
         <span id="w_159" class="ocr_word" title="bbox 869 1709 963 1776" lang="grc">
@@ -1209,7 +1209,7 @@
         </span>
         <span id="w_230" class="ocr_word" title="bbox 1742 2252 1904 2321" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δεινὴ</ins>
+            <ins title="nlp 2.00">(δεινὴ</ins>
           </span>
         </span>
         <span id="w_231" class="ocr_word" title="bbox 1930 2279 1974 2311">
