--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0402.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0402.html
@@ -398,11 +398,6 @@
             <ins class="alt" title="nlp 2.00">προκῦψαι</ins>
           </span>
         </span>
-        <span id="w_75_1" class="ocr_word" title="bbox 470 931 731 990">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_76" class="ocr_word" title="bbox 769 928 1005 990" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">θαρρεῖν·</ins>
@@ -430,7 +425,7 @@
         </span>
         <span id="w_81" class="ocr_word" title="bbox 1512 941 1597 971" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
+            <ins title="nlp 2.00">τοῦ σουλτάνου</ins>
           </span>
         </span>
       </span>
