--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0022.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0022.html
@@ -147,9 +147,14 @@
             <ins title="nlp 2.00">de</ins>
           </span>
         </span>
-        <span id="w_25" class="ocr_word" title="bbox 1445 470 1653 531">
+        <span id="w_25_0" class="ocr_word" title="bbox 1445 470 1653 531">
           <span class="alternatives">
-            <ins title="nlp 2.00">captivis</ins>
+            <ins class="alt" title="nlp 2.00">captivis</ins>
+          </span>
+        </span>
+        <span id="w_25_1" class="ocr_word" title="bbox 1445 470 1653 531">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">imperator</ins>
           </span>
         </span>
       </span>
@@ -507,12 +512,12 @@
             <ins title="nlp 2.00">Cypri</ins>
           </span>
         </span>
-        <span id="w_96_0" class="ocr_word" title="bbox 675 1201 998 1273">
+        <span id="w_96_0_0" class="ocr_word" title="bbox 675 1201 998 1273">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(Εὐμάθιον)</ins>
           </span>
         </span>
-        <span id="w_96_1" class="ocr_word" title="bbox 675 1201 998 1273">
+        <span id="w_96_0_1" class="ocr_word" title="bbox 675 1201 998 1273">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -525,11 +530,6 @@
         <span id="w_98" class="ocr_word" title="bbox 1130 1206 1319 1255" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐκεῖθεν</ins>
-          </span>
-        </span>
-        <span id="w_99" class="ocr_word" title="bbox 1359 1209 1516 1256">
-          <span class="alternatives">
-            <ins title="nlp 2.00">latere</ins>
           </span>
         </span>
       </span>
@@ -606,9 +606,14 @@
             <ins title="nlp 2.00">cf.</ins>
           </span>
         </span>
-        <span id="w_116" class="ocr_word" title="bbox 1255 1371 1294 1402">
+        <span id="w_116_0" class="ocr_word" title="bbox 1255 1371 1294 1402">
           <span class="alternatives">
-            <ins title="nlp 2.00">π</ins>
+            <ins class="alt" title="nlp 2.00">11</ins>
+          </span>
+        </span>
+        <span id="w_116_1" class="ocr_word" title="bbox 1255 1371 1294 1402">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_117" class="ocr_word" title="bbox 1335 1357 1454 1414">
@@ -619,11 +624,6 @@
         <span id="w_118" class="ocr_word" title="bbox 1501 1357 1566 1403">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">14</ins>
-          </span>
-        </span>
-        <span id="w_119" class="ocr_word" title="bbox 1614 1374 1710 1403" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
       </span>
@@ -1206,9 +1206,14 @@
             <ins class="alt" title="nlp 1.00">‘αὐτῶν</ins>
           </span>
         </span>
-        <span id="w_232_0" class="ocr_word" title="bbox 942 2455 1003 2508">
+        <span id="w_232_0_0" class="ocr_word" title="bbox 942 2455 1003 2508">
           <span class="alternatives">
-            <ins title="nlp 2.00">C’</ins>
+            <ins class="alt" title="nlp 2.00">C'</ins>
+          </span>
+        </span>
+        <span id="w_232_0_1" class="ocr_word" title="bbox 942 2455 1003 2508">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_232_1_0" class="ocr_word" title="bbox 942 2455 1003 2508">
@@ -1219,11 +1224,6 @@
         <span id="w_232_1_1" class="ocr_word" title="bbox 942 2455 1003 2508">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">‘αὐῶν</ins>
-          </span>
-        </span>
-        <span id="w_233" class="ocr_word" title="bbox 1043 2477 1133 2522">
-          <span class="alternatives">
-            <ins title="nlp 2.00">F’.</ins>
           </span>
         </span>
       </span>
