--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0023.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0023.html
@@ -413,11 +413,6 @@
             <ins class="alt" title="nlp 2.00">1</ins>
           </span>
         </span>
-        <span id="w_75_1" class="ocr_word" title="bbox 725 1078 743 1109">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_76" class="ocr_word" title="bbox 780 1064 898 1122">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">215,</ins>
@@ -776,14 +771,9 @@
             <ins class="alt" title="nlp 2.00">1</ins>
           </span>
         </span>
-        <span id="w_145_1" class="ocr_word" title="bbox 678 1745 696 1775">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_146" class="ocr_word" title="bbox 729 1730 814 1789">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">45,</ins>
+            <ins title="nlp 2.00">45, 22.</ins>
           </span>
         </span>
       </span>
@@ -885,11 +875,6 @@
         <span id="w_166_0" class="ocr_word" title="bbox 557 1966 595 1997">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">11</ins>
-          </span>
-        </span>
-        <span id="w_166_1" class="ocr_word" title="bbox 557 1966 595 1997">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_167" class="ocr_word" title="bbox 625 1952 744 2010">
@@ -1203,11 +1188,6 @@
             <ins class="alt" title="nlp 2.00">1</ins>
           </span>
         </span>
-        <span id="w_229_1" class="ocr_word" title="bbox 560 2559 577 2589">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_230" class="ocr_word" title="bbox 620 2544 703 2604">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">26,</ins>
@@ -1372,11 +1352,6 @@
         <span id="w_262_0" class="ocr_word" title="bbox 1073 2760 1133 2828">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(11</ins>
-          </span>
-        </span>
-        <span id="w_262_1" class="ocr_word" title="bbox 1073 2760 1133 2828">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_263" class="ocr_word" title="bbox 1169 2765 1288 2826">
