--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0104.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0104.html
@@ -319,26 +319,26 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_60" class="ocr_word" title="bbox 1738 796 1911 843" lang="grc">
+        <span id="w_60_0" class="ocr_word" title="bbox 1738 796 1911 843">
           <span class="alternatives">
-            <ins title="nlp 2.00">γυναι-</ins>
+            <ins class="alt" title="nlp 2.00">γυναικῶν,</ins>
           </span>
         </span>
-        <span id="w_61" class="ocr_word" title="bbox 1933 791 1973 826">
+        <span id="w_60_1" class="ocr_word" title="bbox 1738 796 1911 843">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ρ.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 218 852 1913 920">
-        <span id="w_63" class="ocr_word" title="bbox 374 873 460 918" lang="grc">
+        <span id="w_64_0" class="ocr_word" title="bbox 490 873 538 904">
           <span class="alternatives">
-            <ins title="nlp 2.00">κῶν, τῆς</ins>
+            <ins class="alt" title="nlp 2.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_64" class="ocr_word" title="bbox 490 873 538 904" lang="grc">
+        <span id="w_64_1" class="ocr_word" title="bbox 490 873 538 904">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τε</ins>
+            <ins class="alt" title="nlp 2.00">τε</ins>
           </span>
         </span>
         <span id="w_65" class="ocr_word" title="bbox 564 852 720 904" lang="grc">
@@ -752,23 +752,18 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_144" class="ocr_word" title="bbox 1752 1478 1915 1539" lang="grc">
+        <span id="w_144_0" class="ocr_word" title="bbox 1752 1478 1915 1539">
           <span class="alternatives">
-            <ins title="nlp 2.00">Γεωρ-</ins>
+            <ins class="alt" title="nlp 2.00">Γεωργίου</ins>
           </span>
         </span>
-        <span id="w_145" class="ocr_word" title="bbox 1937 1497 1968 1528" lang="grc">
+        <span id="w_144_1" class="ocr_word" title="bbox 1752 1478 1915 1539">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 219 1550 1916 1619">
-        <span id="w_146" class="ocr_word" title="bbox 219 1554 331 1619" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">γίου</ins>
-          </span>
-        </span>
         <span id="w_147" class="ocr_word" title="bbox 369 1553 554 1619" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γνώμη.</ins>
@@ -930,9 +925,14 @@
             <ins class="alt" title="nlp 1.00">Παλαιολόγος</ins>
           </span>
         </span>
-        <span id="w_178" class="ocr_word" title="bbox 1177 1783 1353 1851" lang="grc">
+        <span id="w_178_0" class="ocr_word" title="bbox 1177 1783 1353 1851">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ὑμᾶς</ins>
+            <ins class="alt" title="nlp 2.00">„</ins>
+          </span>
+        </span>
+        <span id="w_178_1" class="ocr_word" title="bbox 1177 1783 1353 1851">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὐμᾶς</ins>
           </span>
         </span>
         <span id="w_179" class="ocr_word" title="bbox 1380 1786 1515 1849" lang="grc">
@@ -1219,9 +1219,14 @@
             <ins title="nlp 2.00">Τζουρουλόυ</ins>
           </span>
         </span>
-        <span id="w_235" class="ocr_word" title="bbox 708 2329 868 2394" lang="grc">
+        <span id="w_235_0" class="ocr_word" title="bbox 708 2329 868 2394">
           <span class="alternatives">
-            <ins title="nlp 2.00">(κώμη</ins>
+            <ins class="alt" title="nlp 2.00">(</ins>
+          </span>
+        </span>
+        <span id="w_235_1" class="ocr_word" title="bbox 708 2329 868 2394">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κώμη</ins>
           </span>
         </span>
         <span id="w_236" class="ocr_word" title="bbox 916 2329 971 2378" lang="grc">
