--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0103.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0103.html
@@ -1422,9 +1422,14 @@
             <ins class="alt" title="nlp 1.00">ἐξεληλύθασιν</ins>
           </span>
         </span>
-        <span id="w_283" class="ocr_word" title="bbox 946 2822 994 2876" lang="grc">
+        <span id="w_283_0" class="ocr_word" title="bbox 946 2822 994 2876">
           <span class="alternatives">
-            <ins title="nlp 2.00">α</ins>
+            <ins class="alt" title="nlp 2.00">(</ins>
+          </span>
+        </span>
+        <span id="w_283_1" class="ocr_word" title="bbox 946 2822 994 2876">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">α</ins>
           </span>
         </span>
         <span id="w_284" class="ocr_word" title="bbox 1013 2823 1059 2864">
