--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0404.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0404.html
@@ -259,9 +259,14 @@
             <ins class="alt" title="nlp 1.00">κατειληφότες</ins>
           </span>
         </span>
-        <span id="w_51_0" class="ocr_word" title="bbox 597 775 766 833">
+        <span id="w_51_0_0" class="ocr_word" title="bbox 597 775 766 833">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τόπος</ins>
+            <ins class="alt" title="nlp 2.00">(τόπος</ins>
+          </span>
+        </span>
+        <span id="w_51_0_1" class="ocr_word" title="bbox 597 775 766 833">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_52" class="ocr_word" title="bbox 816 773 870 821" lang="grc">
@@ -297,11 +302,6 @@
         <span id="w_58_0" class="ocr_word" title="bbox 1802 775 1856 821">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">Νικαίας</ins>
-          </span>
-        </span>
-        <span id="w_58_1" class="ocr_word" title="bbox 1802 775 1856 821">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">B</ins>
           </span>
         </span>
       </span>
@@ -383,9 +383,9 @@
             <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_77" class="ocr_word" title="bbox 1723 933 1905 979" lang="grc">
+        <span id="w_77_0" class="ocr_word" title="bbox 1723 933 1905 979">
           <span class="alternatives">
-            <ins title="nlp 2.00">Μονα-</ins>
+            <ins class="alt" title="nlp 2.00">Μοναστρᾶς</ins>
           </span>
         </span>
       </span>
@@ -393,11 +393,6 @@
         <span id="w_78" class="ocr_word" title="bbox 144 1029 184 1061">
           <span class="alternatives">
             <ins title="nlp 2.00">10</ins>
-          </span>
-        </span>
-        <span id="w_79" class="ocr_word" title="bbox 207 1025 355 1076" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">στρᾶς</ins>
           </span>
         </span>
         <span id="w_80" class="ocr_word" title="bbox 395 1008 754 1074" lang="grc">
