--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0024.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0024.html
@@ -90,12 +90,12 @@
             <ins title="nlp 2.00">emblema</ins>
           </span>
         </span>
-        <span id="w_15_0" class="ocr_word" title="bbox 1435 372 1543 438">
+        <span id="w_15_0_0" class="ocr_word" title="bbox 1435 372 1543 438">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(τοῦ</ins>
           </span>
         </span>
-        <span id="w_15_1" class="ocr_word" title="bbox 1435 372 1543 438">
+        <span id="w_15_0_1" class="ocr_word" title="bbox 1435 372 1543 438">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -117,19 +117,19 @@
             <ins title="nlp 2.00">vero</ins>
           </span>
         </span>
-        <span id="w_21_0" class="ocr_word" title="bbox 1147 447 1334 519">
+        <span id="w_21_0_0" class="ocr_word" title="bbox 1147 447 1334 519">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(φόνον</ins>
+            <ins class="alt" title="nlp 2.00">(φόνον</ins>
           </span>
         </span>
-        <span id="w_21_1" class="ocr_word" title="bbox 1147 447 1334 519">
+        <span id="w_21_0_1" class="ocr_word" title="bbox 1147 447 1334 519">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_22" class="ocr_word" title="bbox 1372 470 1456 502" lang="grc">
+        <span id="w_21_1_0" class="ocr_word" title="bbox 1147 447 1334 519">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
+            <ins class="alt" title="nlp 2.00">αὐτοκράτορος0</ins>
           </span>
         </span>
       </span>
@@ -191,14 +191,9 @@
             <ins class="alt" title="nlp 2.00">1</ins>
           </span>
         </span>
-        <span id="w_34_1" class="ocr_word" title="bbox 951 619 970 649">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_35" class="ocr_word" title="bbox 1011 604 1132 663">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">232,</ins>
+            <ins title="nlp 2.00">232, 27.</ins>
           </span>
         </span>
       </span>
@@ -1322,11 +1317,6 @@
             <ins class="alt" title="nlp 2.00">Βoëmundus,</ins>
           </span>
         </span>
-        <span id="w_254_1" class="ocr_word" title="bbox 184 2664 528 2724">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_255" class="ocr_word" title="bbox 585 2681 642 2712">
           <span class="alternatives">
             <ins title="nlp 2.00">ea</ins>
@@ -1352,9 +1342,14 @@
             <ins title="nlp 2.00">repetivit;</ins>
           </span>
         </span>
-        <span id="w_260" class="ocr_word" title="bbox 1690 2667 1775 2716">
+        <span id="w_260_0" class="ocr_word" title="bbox 1690 2667 1775 2716">
           <span class="alternatives">
-            <ins title="nlp 2.00">sed</ins>
+            <ins class="alt" title="nlp 2.00">sed</ins>
+          </span>
+        </span>
+        <span id="w_260_1" class="ocr_word" title="bbox 1690 2667 1775 2716">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ut</ins>
           </span>
         </span>
       </span>
