--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0121.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0121.html
@@ -1077,9 +1077,9 @@
             <ins class="alt" title="nlp 1.00">φησιν</ins>
           </span>
         </span>
-        <span id="w_210_0" class="ocr_word" title="bbox 1608 2008 1793 2069">
+        <span id="w_210_0_0" class="ocr_word" title="bbox 1608 2008 1793 2069">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">„ἀπελ-</ins>
+            <ins class="alt" title="nlp 2.00">„ἀπελθὼν</ins>
           </span>
         </span>
       </span>
@@ -1087,11 +1087,6 @@
         <span id="w_211_0" class="ocr_word" title="bbox 40 2103 74 2136">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">D</ins>
-          </span>
-        </span>
-        <span id="w_211_1" class="ocr_word" title="bbox 40 2103 74 2136">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">θὼν</ins>
           </span>
         </span>
         <span id="w_213" class="ocr_word" title="bbox 253 2080 552 2149" lang="grc">
@@ -1455,7 +1450,7 @@
         </span>
         <span id="w_284" class="ocr_word" title="bbox 1147 2625 1306 2691" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὗτοι</ins>
+            <ins title="nlp 2.00">οὗτοι</ins>
           </span>
         </span>
         <span id="w_285" class="ocr_word" title="bbox 1358 2627 1411 2676" lang="grc">
