--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0497.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0497.html
@@ -572,16 +572,11 @@
         </span>
         <span id="w_107" class="ocr_word" title="bbox 1760 1185 1839 1215" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐν-</ins>
+            <ins title="nlp 2.00">ἐνέφηνεν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 139 1241 1841 1308">
-        <span id="w_108" class="ocr_word" title="bbox 139 1242 325 1306" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">έφηνεν</ins>
-          </span>
-        </span>
         <span id="w_109" class="ocr_word" title="bbox 349 1243 526 1293" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αἰτίαν.</ins>
@@ -1324,16 +1319,11 @@
         </span>
         <span id="w_253" class="ocr_word" title="bbox 1718 2397 1840 2450" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταὐ-</ins>
+            <ins title="nlp 2.00">ταὐτὸν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 144 2477 1840 2552">
-        <span id="w_254" class="ocr_word" title="bbox 144 2485 230 2536" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
-          </span>
-        </span>
         <span id="w_255" class="ocr_word" title="bbox 268 2486 540 2551" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">συμβαῖεν,</ins>
