--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0122.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0122.html
@@ -379,16 +379,11 @@
         </span>
         <span id="w_71" class="ocr_word" title="bbox 1506 852 1899 921" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παρεσκευασμέ-</ins>
+            <ins title="nlp 2.00">παρεσκευασμένοι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 200 931 1898 1001">
-        <span id="w_72" class="ocr_word" title="bbox 200 952 279 984" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νοι</ins>
-          </span>
-        </span>
         <span id="w_73" class="ocr_word" title="bbox 316 934 400 983" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -488,11 +483,6 @@
             <ins class="alt" title="nlp 2.00">ᾖπερ</ins>
           </span>
         </span>
-        <span id="w_92_1" class="ocr_word" title="bbox 377 1090 505 1156">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_93" class="ocr_word" title="bbox 545 1106 588 1137" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οἱ</ins>
@@ -523,9 +513,14 @@
             <ins class="alt" title="nlp 1.00">ἐνδιαιτώμενοι</ins>
           </span>
         </span>
-        <span id="w_99" class="ocr_word" title="bbox 1683 1106 1782 1137" lang="grc">
+        <span id="w_99_0" class="ocr_word" title="bbox 1683 1106 1782 1137">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
+            <ins class="alt" title="nlp 2.00">τῶν</ins>
+          </span>
+        </span>
+        <span id="w_99_1" class="ocr_word" title="bbox 1683 1106 1782 1137">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">πάλαι</ins>
           </span>
         </span>
       </span>
@@ -609,11 +604,6 @@
             <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_117_1" class="ocr_word" title="bbox 563 1320 647 1370">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_118" class="ocr_word" title="bbox 692 1320 863 1371" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κανὼν</ins>
@@ -639,9 +629,14 @@
             <ins class="alt" title="nlp 1.00">τοῖς</ins>
           </span>
         </span>
-        <span id="w_123" class="ocr_word" title="bbox 1597 1317 1702 1385" lang="grc">
+        <span id="w_123_0" class="ocr_word" title="bbox 1597 1317 1702 1385">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μετ’</ins>
+            <ins class="alt" title="nlp 2.00">μετ’</ins>
+          </span>
+        </span>
+        <span id="w_123_1" class="ocr_word" title="bbox 1597 1317 1702 1385">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">αὐτὸν</ins>
           </span>
         </span>
       </span>
@@ -757,7 +752,7 @@
         </span>
         <span id="w_146" class="ocr_word" title="bbox 955 1549 1170 1618" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐλέγετο</ins>
+            <ins title="nlp 2.00">ἐλέγετο</ins>
           </span>
         </span>
         <span id="w_147" class="ocr_word" title="bbox 1204 1573 1297 1620" lang="grc">
