--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0123.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0123.html
@@ -200,7 +200,7 @@
         </span>
         <span id="w_37_0" class="ocr_word" title="bbox 1773 1233 1822 1303">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(ὁ</ins>
+            <ins class="alt" title="nlp 2.00">ὁ</ins>
           </span>
         </span>
       </span>
