--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0107.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0107.html
@@ -730,9 +730,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 43 1543 1797 1612">
-        <span id="w_138" class="ocr_word" title="bbox 43 1545 321 1611" lang="grc">
+        <span id="w_138_0" class="ocr_word" title="bbox 43 1545 321 1611">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἀθύραν</ins>
+            <ins class="alt" title="nlp 2.00">50</ins>
+          </span>
+        </span>
+        <span id="w_138_1" class="ocr_word" title="bbox 43 1545 321 1611">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Ἀθύραν</ins>
           </span>
         </span>
         <span id="w_139" class="ocr_word" title="bbox 366 1543 564 1597" lang="grc">
@@ -792,9 +797,14 @@
             <ins class="alt" title="nlp 1.00">κατέλαβον</ins>
           </span>
         </span>
-        <span id="w_150" class="ocr_word" title="bbox 993 1625 1154 1689" lang="grc">
+        <span id="w_150_0" class="ocr_word" title="bbox 993 1625 1154 1689">
           <span class="alternatives">
-            <ins title="nlp 2.00">(κώμη</ins>
+            <ins class="alt" title="nlp 2.00">(</ins>
+          </span>
+        </span>
+        <span id="w_150_1" class="ocr_word" title="bbox 993 1625 1154 1689">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">κώμη</ins>
           </span>
         </span>
         <span id="w_151" class="ocr_word" title="bbox 1182 1625 1236 1673" lang="grc">
