--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0105.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0105.html
@@ -33,11 +33,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 24 298 1801 369">
-        <span id="w_4" class="ocr_word" title="bbox 24 314 27 356">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
         <span id="w_5" class="ocr_word" title="bbox 115 300 443 356" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπεστάλκασι</ins>
@@ -75,11 +70,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 23 377 1802 448">
-        <span id="w_12" class="ocr_word" title="bbox 23 390 27 436">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
         <span id="w_13" class="ocr_word" title="bbox 116 385 170 433" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
@@ -132,11 +122,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 23 455 1804 525">
-        <span id="w_23" class="ocr_word" title="bbox 23 462 25 520">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
         <span id="w_24" class="ocr_word" title="bbox 116 482 216 511" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
@@ -184,11 +169,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 22 526 1802 603">
-        <span id="w_33" class="ocr_word" title="bbox 22 526 25 587">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
         <span id="w_34" class="ocr_word" title="bbox 59 557 92 588">
           <span class="alternatives">
             <ins title="nlp 2.00">D</ins>
@@ -612,9 +592,14 @@
             <ins title="nlp 2.00">49</ins>
           </span>
         </span>
-        <span id="w_117" class="ocr_word" title="bbox 115 1273 146 1301" lang="grc">
+        <span id="w_117_0" class="ocr_word" title="bbox 115 1273 146 1301">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἡμεῖς</ins>
+            <ins class="alt" title="nlp 2.00">„</ins>
+          </span>
+        </span>
+        <span id="w_117_1" class="ocr_word" title="bbox 115 1273 146 1301">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἡμεῖς</ins>
           </span>
         </span>
         <span id="w_118" class="ocr_word" title="bbox 346 1235 478 1301" lang="grc">
@@ -1265,9 +1250,14 @@
             <ins class="alt" title="nlp 1.00">ἐπειδὴ</ins>
           </span>
         </span>
-        <span id="w_250" class="ocr_word" title="bbox 1056 2340 1157 2388" lang="grc">
+        <span id="w_250_0" class="ocr_word" title="bbox 1056 2340 1157 2388">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρ αὐτοῦ</ins>
+            <ins class="alt" title="nlp 2.00">παρ᾿</ins>
+          </span>
+        </span>
+        <span id="w_250_1" class="ocr_word" title="bbox 1056 2340 1157 2388">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">αὐτοῦ</ins>
           </span>
         </span>
         <span id="w_251" class="ocr_word" title="bbox 1390 2323 1695 2387" lang="grc">
