--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0026.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0026.html
@@ -717,11 +717,6 @@
             <ins class="alt" title="nlp 2.00">1</ins>
           </span>
         </span>
-        <span id="w_136_1" class="ocr_word" title="bbox 320 1608 338 1639">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_137" class="ocr_word" title="bbox 374 1593 496 1653">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">186,</ins>
@@ -967,11 +962,6 @@
             <ins class="alt" title="nlp 2.00">vel</ins>
           </span>
         </span>
-        <span id="w_185_1" class="ocr_word" title="bbox 358 1960 439 2007">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_186" class="ocr_word" title="bbox 477 1959 585 2006">
           <span class="alternatives">
             <ins title="nlp 2.00">Nus</ins>
@@ -997,9 +987,14 @@
             <ins title="nlp 2.00">nullus</ins>
           </span>
         </span>
-        <span id="w_191" class="ocr_word" title="bbox 1507 1976 1743 2020">
+        <span id="w_191_0" class="ocr_word" title="bbox 1507 1976 1743 2020">
           <span class="alternatives">
-            <ins title="nlp 2.00">umquam</ins>
+            <ins class="alt" title="nlp 2.00">umquam</ins>
+          </span>
+        </span>
+        <span id="w_191_1" class="ocr_word" title="bbox 1507 1976 1743 2020">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">fuit:</ins>
           </span>
         </span>
       </span>
@@ -1241,11 +1236,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 227 2460 1920 2543">
-        <span id="w_241" class="ocr_word" title="bbox 227 2479 396 2524">
-          <span class="alternatives">
-            <ins title="nlp 2.00">cantes</ins>
-          </span>
-        </span>
         <span id="w_242" class="ocr_word" title="bbox 451 2475 593 2522">
           <span class="alternatives">
             <ins title="nlp 2.00">illum</ins>
@@ -1318,9 +1308,14 @@
             <ins title="nlp 2.00">appellatur</ins>
           </span>
         </span>
-        <span id="w_255" class="ocr_word" title="bbox 1536 2551 1736 2613">
+        <span id="w_255_0" class="ocr_word" title="bbox 1536 2551 1736 2613">
           <span class="alternatives">
-            <ins title="nlp 2.00">quidam</ins>
+            <ins class="alt" title="nlp 2.00">quidam</ins>
+          </span>
+        </span>
+        <span id="w_255_1" class="ocr_word" title="bbox 1536 2551 1736 2613">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Nemod,</ins>
           </span>
         </span>
       </span>
@@ -1387,14 +1382,14 @@
             <ins title="nlp 2.00">vocabulum</ins>
           </span>
         </span>
-        <span id="w_270" class="ocr_word" title="bbox 1224 2693 1468 2758">
+        <span id="w_270_0" class="ocr_word" title="bbox 1224 2693 1468 2758">
           <span class="alternatives">
-            <ins title="nlp 2.00">᾿.</ins>
+            <ins class="alt" title="nlp 2.00">sumpsit’.</ins>
           </span>
         </span>
-        <span id="w_271" class="ocr_word" title="bbox 1527 2680 1693 2746">
+        <span id="w_270_1" class="ocr_word" title="bbox 1224 2693 1468 2758">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ρθφινι</ins>
+            <ins class="alt" title="nlp 2.00">Rufini</ins>
           </span>
         </span>
         <span id="w_272" class="ocr_word" title="bbox 1730 2692 1912 2772">
@@ -1419,9 +1414,14 @@
             <ins title="nlp 2.00">pasch.</ins>
           </span>
         </span>
-        <span id="w_277" class="ocr_word" title="bbox 1052 2787 1071 2818">
+        <span id="w_277_0" class="ocr_word" title="bbox 1052 2787 1071 2818">
           <span class="alternatives">
-            <ins title="nlp 2.00">I</ins>
+            <ins class="alt" title="nlp 2.00">1</ins>
+          </span>
+        </span>
+        <span id="w_277_1" class="ocr_word" title="bbox 1052 2787 1071 2818">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_278" class="ocr_word" title="bbox 1111 2773 1196 2829">
@@ -1434,11 +1434,6 @@
             <ins class="alt" title="nlp 1.00">11</ins>
           </span>
         </span>
-        <span id="w_280" class="ocr_word" title="bbox 1335 2788 1438 2833">
-          <span class="alternatives">
-            <ins title="nlp 2.00">11</ins>
-          </span>
-        </span>
         <span id="w_281" class="ocr_word" title="bbox 1486 2773 1560 2820">
           <span class="alternatives">
             <ins title="nlp 2.00">sqq.</ins>
@@ -1447,11 +1442,6 @@
         <span id="w_282" class="ocr_word" title="bbox 1600 2773 1776 2822">
           <span class="alternatives">
             <ins title="nlp 2.00">Bonn.:</ins>
-          </span>
-        </span>
-        <span id="w_283" class="ocr_word" title="bbox 1830 2768 1908 2823" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
       </span>
