--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0124.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0124.html
@@ -1195,23 +1195,18 @@
             <ins class="alt" title="nlp 1.00">βασιλίδος</ins>
           </span>
         </span>
-        <span id="w_232" class="ocr_word" title="bbox 1835 2199 1906 2246" lang="grc">
+        <span id="w_232_0" class="ocr_word" title="bbox 1835 2199 1906 2246">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐγ-</ins>
+            <ins class="alt" title="nlp 2.00">ἐγκαρτερίας.</ins>
           </span>
         </span>
-        <span id="w_233" class="ocr_word" title="bbox 1930 2200 1969 2233">
+        <span id="w_232_1" class="ocr_word" title="bbox 1835 2199 1906 2246">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ρ.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 216 2255 1908 2325">
-        <span id="w_234" class="ocr_word" title="bbox 216 2259 489 2325" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καρτερίας.</ins>
-          </span>
-        </span>
         <span id="w_235" class="ocr_word" title="bbox 554 2256 645 2323" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐγὼ</ins>
