--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0125.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0125.html
@@ -1117,16 +1117,21 @@
             <ins class="alt" title="nlp 1.00">χρόνων</ins>
           </span>
         </span>
-        <span id="w_223" class="ocr_word" title="bbox 1696 2031 1814 2063" lang="grc">
+        <span id="w_223_0" class="ocr_word" title="bbox 1696 2031 1814 2063">
           <span class="alternatives">
-            <ins title="nlp 2.00">ᾠκο-</ins>
+            <ins class="alt" title="nlp 2.00">ᾠκοδόμητο,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 64 2093 1815 2160">
-        <span id="w_224" class="ocr_word" title="bbox 64 2095 329 2160" lang="grc">
+        <span id="w_224_0" class="ocr_word" title="bbox 64 2095 329 2160">
           <span class="alternatives">
-            <ins title="nlp 2.00">δόμητο,</ins>
+            <ins class="alt" title="nlp 2.00">D</ins>
+          </span>
+        </span>
+        <span id="w_224_1" class="ocr_word" title="bbox 64 2095 329 2160">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_225" class="ocr_word" title="bbox 370 2114 497 2146" lang="grc">
@@ -1167,11 +1172,6 @@
         <span id="w_232" class="ocr_word" title="bbox 1532 2112 1688 2157" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἔχεται</ins>
-          </span>
-        </span>
-        <span id="w_233" class="ocr_word" title="bbox 1721 2111 1815 2159" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
       </span>
