--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0498.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0498.html
@@ -734,16 +734,11 @@
         </span>
         <span id="w_141" class="ocr_word" title="bbox 1779 1503 1876 1534" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πα-</ins>
+            <ins title="nlp 2.00">παλινοστῆσαι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 172 1562 1875 1629">
-        <span id="w_142" class="ocr_word" title="bbox 172 1566 461 1626" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λινοστῆσαι</ins>
-          </span>
-        </span>
         <span id="w_143" class="ocr_word" title="bbox 499 1562 841 1628" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">παρεμβολήν.</ins>
@@ -1474,19 +1469,19 @@
             <ins class="alt" title="nlp 1.00">οἶσθα</ins>
           </span>
         </span>
-        <span id="w_285" class="ocr_word" title="bbox 1741 2728 1868 2777" lang="grc">
+        <span id="w_285_0" class="ocr_word" title="bbox 1741 2728 1868 2777">
           <span class="alternatives">
-            <ins title="nlp 2.00">πάν-</ins>
+            <ins class="alt" title="nlp 2.00">τάνἀπαγγείλαιεν</ins>
+          </span>
+        </span>
+        <span id="w_285_1" class="ocr_word" title="bbox 1741 2728 1868 2777">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_286" class="ocr_word" title="bbox 1894 2745 1933 2778">
           <span class="alternatives">
             <ins title="nlp 2.00">Ρ.</ins>
-          </span>
-        </span>
-        <span id="w_287" class="ocr_word" title="bbox 1956 2745 1985 2776">
-          <span class="alternatives">
-            <ins title="nlp 2.00">40</ins>
           </span>
         </span>
       </span>
