--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0027.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0027.html
@@ -967,19 +967,19 @@
             <ins class="alt" title="nlp 2.00">11</ins>
           </span>
         </span>
-        <span id="w_187_1" class="ocr_word" title="bbox 1221 2018 1259 2048">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_188" class="ocr_word" title="bbox 1299 2004 1381 2064">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">73,</ins>
           </span>
         </span>
-        <span id="w_189" class="ocr_word" title="bbox 1414 2004 1482 2051">
+        <span id="w_189_0" class="ocr_word" title="bbox 1414 2004 1482 2051">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">26</ins>
+            <ins class="alt" title="nlp 2.00">26</ins>
+          </span>
+        </span>
+        <span id="w_189_1" class="ocr_word" title="bbox 1414 2004 1482 2051">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">λογποιουμένην</ins>
           </span>
         </span>
       </span>
@@ -1014,11 +1014,6 @@
         <span id="w_197_0" class="ocr_word" title="bbox 120 2166 139 2197">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">1</ins>
-          </span>
-        </span>
-        <span id="w_197_1" class="ocr_word" title="bbox 120 2166 139 2197">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_198" class="ocr_word" title="bbox 191 2153 309 2213">
@@ -1068,11 +1063,6 @@
             <ins class="alt" title="nlp 2.00">11</ins>
           </span>
         </span>
-        <span id="w_207_1" class="ocr_word" title="bbox 358 2240 397 2271">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_208" class="ocr_word" title="bbox 448 2226 537 2285">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">19,</ins>
@@ -1093,9 +1083,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_212" class="ocr_word" title="bbox 1303 2219 1557 2287" lang="grc">
+        <span id="w_212_0" class="ocr_word" title="bbox 1303 2219 1557 2287">
           <span class="alternatives">
-            <ins title="nlp 2.00">Κομάνων</ins>
+            <ins class="alt" title="nlp 2.00">Κομάνων</ins>
+          </span>
+        </span>
+        <span id="w_212_1" class="ocr_word" title="bbox 1303 2219 1557 2287">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἒφοδον</ins>
           </span>
         </span>
       </span>
