--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0109.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0109.html
@@ -33,11 +33,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 10 306 1776 378">
-        <span id="w_4" class="ocr_word" title="bbox 10 313 14 365">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
         <span id="w_5" class="ocr_word" title="bbox 85 332 216 378" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">παρὰ</ins>
@@ -80,11 +75,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 10 378 1776 454">
-        <span id="w_13" class="ocr_word" title="bbox 10 378 15 452">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
         <span id="w_14" class="ocr_word" title="bbox 84 388 435 454" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀναρπάζοιτο,</ins>
@@ -132,11 +122,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 10 465 1776 532">
-        <span id="w_23" class="ocr_word" title="bbox 10 489 15 516">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
         <span id="w_24" class="ocr_word" title="bbox 87 483 244 532" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">σχῆμα</ins>
@@ -179,9 +164,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 11 532 1776 610">
-        <span id="w_32" class="ocr_word" title="bbox 11 532 59 605">
+        <span id="w_32_0" class="ocr_word" title="bbox 11 532 59 605">
           <span class="alternatives">
-            <ins title="nlp 2.00">| C</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
+          </span>
+        </span>
+        <span id="w_32_1" class="ocr_word" title="bbox 11 532 59 605">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_33" class="ocr_word" title="bbox 85 562 172 610" lang="grc">
@@ -219,18 +209,8 @@
             <ins class="alt" title="nlp 1.00">ὁπλιτικὸν</ins>
           </span>
         </span>
-        <span id="w_40" class="ocr_word" title="bbox 1637 561 1776 592" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἅπαν</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 11 620 1839 692">
-        <span id="w_41" class="ocr_word" title="bbox 11 637 16 692">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
         <span id="w_42" class="ocr_word" title="bbox 84 621 191 687" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">περὶ</ins>
@@ -276,14 +256,14 @@
             <ins title="nlp 2.00">ἕκαστος</ins>
           </span>
         </span>
-        <span id="w_51_0" class="ocr_word" title="bbox 1670 638 1775 670">
+        <span id="w_51_0_0" class="ocr_word" title="bbox 1670 638 1775 670">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἐπι-</ins>
+            <ins class="alt" title="nlp 2.00">ἐπιθυμίαν</ins>
           </span>
         </span>
-        <span id="w_51_1" class="ocr_word" title="bbox 1670 638 1775 670">
+        <span id="w_51_0_1" class="ocr_word" title="bbox 1670 638 1775 670">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -291,11 +271,6 @@
         <span id="w_53" class="ocr_word" title="bbox 21 712 61 743">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">51</ins>
-          </span>
-        </span>
-        <span id="w_54" class="ocr_word" title="bbox 83 699 276 763" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θυμίαν</ins>
           </span>
         </span>
         <span id="w_55" class="ocr_word" title="bbox 313 695 574 762" lang="grc">
@@ -335,11 +310,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 12 766 1777 844">
-        <span id="w_62" class="ocr_word" title="bbox 12 766 16 844">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
         <span id="w_63" class="ocr_word" title="bbox 83 775 250 842" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λαβὼν</ins>
@@ -377,11 +347,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 12 848 1775 921">
-        <span id="w_70" class="ocr_word" title="bbox 12 848 17 920">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
         <span id="w_71" class="ocr_word" title="bbox 85 866 331 921" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἐπειρᾶτο·</ins>
