--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0499.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0499.html
@@ -75,7 +75,7 @@
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1702 334 1846 363" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατα-</ins>
+            <ins title="nlp 2.00">κατασχεῖν</ins>
           </span>
         </span>
       </span>
@@ -961,14 +961,14 @@
             <ins class="alt" title="nlp 1.00">βασιλικῆς</ins>
           </span>
         </span>
-        <span id="w_184" class="ocr_word" title="bbox 1767 1790 1841 1841" lang="grc">
+        <span id="w_184_0" class="ocr_word" title="bbox 1767 1790 1841 1841">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐξ-</ins>
+            <ins class="alt" title="nlp 2.00">ἐξαναστάντα</ins>
           </span>
         </span>
-        <span id="w_185" class="ocr_word" title="bbox 1864 1801 1908 1834">
+        <span id="w_184_1" class="ocr_word" title="bbox 1767 1790 1841 1841">
           <span class="alternatives">
-            <ins title="nlp 2.00">20</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
