--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0126.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0126.html
@@ -341,11 +341,6 @@
             <ins class="alt" title="nlp 2.00">„οὐ</ins>
           </span>
         </span>
-        <span id="w_62_1" class="ocr_word" title="bbox 894 874 999 920">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_63" class="ocr_word" title="bbox 1049 852 1116 904" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δι’</ins>
@@ -361,9 +356,14 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_66" class="ocr_word" title="bbox 1472 869 1706 903" lang="grc">
+        <span id="w_66_0" class="ocr_word" title="bbox 1472 869 1706 903">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοσοῦτον</ins>
+            <ins class="alt" title="nlp 2.00">τοσοῦτον</ins>
+          </span>
+        </span>
+        <span id="w_66_1" class="ocr_word" title="bbox 1472 869 1706 903">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἀγῶνα</ins>
           </span>
         </span>
       </span>
@@ -883,14 +883,14 @@
             <ins class="alt" title="nlp 1.00">σῶμα</ins>
           </span>
         </span>
-        <span id="w_168" class="ocr_word" title="bbox 1838 1710 1907 1758" lang="grc">
+        <span id="w_168_0" class="ocr_word" title="bbox 1838 1710 1907 1758">
           <span class="alternatives">
-            <ins title="nlp 2.00">δι-</ins>
+            <ins class="alt" title="nlp 2.00">διαναπαῦσαι,</ins>
           </span>
         </span>
-        <span id="w_169" class="ocr_word" title="bbox 1932 1724 1962 1757">
+        <span id="w_168_1" class="ocr_word" title="bbox 1838 1710 1907 1758">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -898,11 +898,6 @@
         <span id="w_170" class="ocr_word" title="bbox 153 1804 194 1836">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">20</ins>
-          </span>
-        </span>
-        <span id="w_171" class="ocr_word" title="bbox 216 1795 524 1850" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀναπαῦσαι,</ins>
           </span>
         </span>
         <span id="w_172" class="ocr_word" title="bbox 552 1792 710 1846" lang="grc">
@@ -937,16 +932,11 @@
         </span>
         <span id="w_178" class="ocr_word" title="bbox 1756 1806 1910 1854" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φρον-</ins>
+            <ins title="nlp 2.00">φροντίδος.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 215 1859 1913 1931">
-        <span id="w_179" class="ocr_word" title="bbox 215 1866 364 1925" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τίδος.</ins>
-          </span>
-        </span>
         <span id="w_180" class="ocr_word" title="bbox 429 1884 513 1914" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1357,12 +1347,7 @@
         </span>
         <span id="w_263" class="ocr_word" title="bbox 219 2564 371 2629" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁρμῆς</ins>
-          </span>
-        </span>
-        <span id="w_264" class="ocr_word" title="bbox 385 2600 399 2628">
-          <span class="alternatives">
-            <ins title="nlp 2.00">, </ins>
+            <ins class="alt" title="nlp 2.00">ὁρμῆς, </ins>
           </span>
         </span>
         <span id="w_265" class="ocr_word" title="bbox 438 2560 764 2629" lang="grc">
